<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mod_slam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="delport121@gmail.com">ruan</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <depend>lidarslam_msgs</depend>

  <depend>std_msgs</depend>
  <depend>slam_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>

  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
